# derivatives

./: main.cpp
src/: AlgoDiff.hpp  CMakeLists.txt  ConstantAdditionerResult.cpp  ConstantAdditionerResult.hpp  ConstantMultiplierResult.cpp  ConstantMultiplierResult.hpp  ConstantResult.cpp  ConstantResult.hpp  Derivatives.cpp  Derivatives.hpp  DivisionResult.cpp  DivisionResult.hpp  FunctionalTests.cpp  FunctionalTests.hpp  GenericFunction.hpp  GenericFunctionResult.hpp  Math.hpp  MathFunctions.cpp  MathFunctions.hpp  MemoryLogger.hpp  MinusResult.cpp  MinusResult.hpp  MultiplyResult.cpp  MultiplyResult.hpp  OneParameterResult.hpp  Parameter.cpp  Parameter.hpp  PerformanceTests.cpp  PerformanceTests.hpp  PlusResult.cpp  PlusResult.hpp  Result.cpp  Result.hpp  TwoParametersResult.hpp  UserDefinedFunctions.hpp  Variable.cpp  Variable.hpp  main.cpp
